--- a/styles/stylesheet.css
+++ b/styles/stylesheet.css
@@ -21,6 +21,8 @@
 }
 
 /* GERAL */
+
+
 * {
   margin: 0;
   padding: 0;
@@ -239,4 +241,107 @@
 
 .lojinhaTextStyle {
   color: #7270c3;
+}
+
+.fundoQuartaParte{
+  width: 100%;
+  height: 700px;
+  position: absolute;
+}
+
+
+
+#SeguraTudo4{
+  position: relative;
+  width: 1600px;
+  height: 700px;
+}
+
+.funcionalidadesHolder{
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  width: 1582px;
+  height: 700px;
+  margin-left: 80px;
+ 
+  
+}
+
+.textosFuncionalidades{
+  width: 390px;
+  display: flex;
+  flex-direction: column;
+  padding-left: 100px;
+}
+
+.botoesFuncionalidades{
+  display: flex;
+  flex-direction: column;
+
+}
+
+.funcionalidadesTitulo{
+  color: #202225;
+  font-family: "Raleway Extra Bold", sans-serif;
+  font-size: 40px;
+  display: inline-block;
+}
+
+.funcionalidadesSubTitulo{
+  color: #202225;
+  font-family: "Raleway Extra Bold", sans-serif;
+  font-size: 30px;
+  display: inline-block;
+  padding-top: 25px;
+}
+
+.funcionalidadesTextos{
+  color: #202225;
+  font-family: "Raleway Bold", sans-serif;
+  font-size: 20px;
+  display: inline-block;
+  padding-top: 10px;
+}
+
+
+.leandro{
+  position: absolute;
+  padding-top: 420px;
+  padding-left: 50px;
+}
+
+.iconeBotaoFuncionalidade{
+  width: 50px;
+  height: 50px;
+}
+
+.balaoFuncionalidade{
+  display: flex;
+  align-items: center;
+  flex-direction: row;
+  width: 550px;
+  height: 100px;
+  background-color: #ffffff;
+  border-radius: 17px;
+  margin-right: 120px;
+  overflow: hidden;
+  margin-top: 30px;
+  box-shadow: 0px 9px 12px -7px #696969;
+}
+
+
+.iconeFuncionalidade{
+  padding-left:50px; 
+  width: 60px;
+}
+
+.textoFuncionalidade{
+  color: #202225;
+  font-family: "Raleway Bold", sans-serif;
+  font-size: 28px;
+  display: inline-block;
+  padding-left: 20px;
+  
 }
