--- a/styles/stylesheet.css
+++ b/styles/stylesheet.css
@@ -22,6 +22,17 @@
 
 /* GERAL */
 
+html, body {
+  scroll-behavior: smooth;
+  max-width: 100%;
+  overflow-x: hidden;
+}
+body{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  
+}
 
 * {
   margin: 0;
@@ -31,7 +42,6 @@
 /* NAV */
 #navbar {
   position: fixed;
-  top: 0;
   display: flex;
   width: 80%;
   height: 130px;
@@ -72,10 +82,35 @@
 }
 
 /* ELEMENTOS PAGE */
-.background {
-  width: 100%;
-  height: 1000px;
-  position: absolute;
+.holderPrimeiraPage {
+  height: 900px;
+  width: 1680px;
+  background-repeat: no-repeat;
+  background-image: url("../images/background.svg");
+}
+
+.holderSegundaPage{
+  height: 700px;
+  width: 1680px;
+  margin-top: 100px;
+}
+.holderTerceiraPage{
+  height: 400px;
+  width: 1680px;
+  margin-top: 100px;
+}
+.holderQuartaPage{
+  height: 600px;
+  width: 1680px;
+  margin-top: 50px;
+}
+
+.holderQuintaPage{
+  height: 700px;
+  width: 1680px;
+  margin-top: 50px;
+  background-repeat: no-repeat;
+  background-image: url("../images/fundo.svg");
 }
 
 .descEilus {
@@ -84,7 +119,7 @@
   justify-content: space-between;
   align-items: center;
   padding-top: 170px;
-  padding-left: 20px;
+
 }
 
 .desc {
@@ -113,7 +148,6 @@
 
 .textinhoHolder {
   display: flex;
-  margin-top: 350px;
   width: 100%;
   justify-content: center;
   text-align: center;
@@ -157,9 +191,13 @@
 }
 
 .faixaNetworking {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   width: 100%;
-  height: 500px;
-  position: absolute;
+  height: 350px;
+  background-image: url("../images/conteudo\ -\ 2.svg");
+
 }
 
 .networkingTextoHolder {
@@ -243,11 +281,7 @@
   color: #7270c3;
 }
 
-.fundoQuartaParte{
-  width: 100%;
-  height: 700px;
-  position: absolute;
-}
+
 
 
 
@@ -328,7 +362,9 @@
   margin-right: 120px;
   overflow: hidden;
   margin-top: 30px;
-  box-shadow: 0px 9px 12px -7px #696969;
+  filter: drop-shadow(4px 4px 20px rgba(0, 0, 0, 0.25));
+  border: 1px solid rgba(0, 0, 0, 0.3);
+border-radius: 30px;
 }
 
 
@@ -344,4 +380,70 @@
   display: inline-block;
   padding-left: 20px;
   
+}
+
+.container-content{
+  width: 100vw;
+  display: flex;
+  flex-direction: column;
+  height: fit-content;
+  justify-content: center;
+  align-items: center;
+  overflow-x: hidden;
+}
+
+.container-footer{
+  display: flex;
+  flex-direction: column;
+  justify-items: center;
+  align-items: center;
+  height: 250px;
+  width: 1670px;
+  background-color: #9998D3;
+
+}
+
+
+#home{
+  width: 100%;
+}
+
+.FooterElement{
+  text-decoration: none;
+  color: #ffffff;
+  font-family: "Raleway Bold", sans-serif;
+  font-size: 17px;
+  display: inline-block;
+}
+
+.FooterHolder{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  width: 550px;
+  height: 50px;
+ padding-top: 40px;
+}
+
+.FooterHolder2{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  align-items: center;
+  width: 305px;
+  height: 50px;
+  padding-left: 15px;
+}
+
+.FooterHolder3{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  align-items: center;
+  width: 100%;
+  height: 50px;
+  margin-top: 15px;
+  padding-top: 25px;
+  border-top: 1px solid #FFFFFF;
 }
