--- a/views/css/style.css
+++ b/views/css/style.css
@@ -145,7 +145,7 @@ width: 100%;
 }
 
 .formText{
-    font-family: 'Raleway';
+    font-family: 'Raleway Bold', sans-serif;
     font-style: normal;
     font-weight: 700;
     font-size: 20px;
