--- a/views/css/style.css
+++ b/views/css/style.css
@@ -33,6 +33,12 @@
     padding: 0;
   }
 
+  html, body {
+    max-width: 100%;
+    max-height: 100%;
+    overflow: hidden;
+  }
+
   .holderETU{
     height: 911px;
     width: 1680px;
@@ -155,17 +161,17 @@ width: 100%;
 
 .formInput{
     background: #FFFFFF;
-mix-blend-mode: normal;
-border: 1px solid #C1C1C1;
-backdrop-filter: blur(40px);
-border-radius: 20px;
-height: 50px;
-padding-inline: 20px;
-font-family: "Raleway Bold", sans-serif;
-font-style: normal;
-font-weight: 400;
-font-size: 16px;
-line-height: 19px;
+    mix-blend-mode: normal;
+    border: 1px solid #C1C1C1;
+    backdrop-filter: blur(40px);
+    border-radius: 20px;
+    height: 50px;
+    padding-inline: 20px;
+    font-family: "Raleway Bold", sans-serif;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 19px;
 }
 
 .formInput::placeholder{
@@ -203,5 +209,127 @@ line-height: 19px;
 
     font-family: "Raleway Bold", sans-serif;
     color: #DB310C;
-  
 }
+
+/* PAGE CADASTRO DE FOTO */
+
+.holderFormularioFoto{
+    height: 911px;
+    width: 1680px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    overflow: hidden;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-image: url("../img//fundo-cadastro.svg");
+  }
+
+  .line{
+    width: 221px;
+    height: 0px;
+    border: 1px solid #9A9A9A;
+  }
+
+  .tituloFormFoto{
+    font-family: "Raleway Bold", sans-serif;
+    color: #000000;
+    font-size: 50px;
+    text-decoration: none;
+    letter-spacing: 1px;
+    padding-top: 70px;
+    width: 400px;
+    text-align: center;
+  }
+
+  .subTituloFormFoto{
+    font-family: "Raleway Bold", sans-serif;
+    font-style: normal;
+    font-weight: 700;
+    font-size: 24px;
+    line-height: 28px;
+    padding-top: 20px;
+  }
+
+.formLabelFoto{
+    padding-top: 13px;
+    padding-left: 65px;
+    margin-top: 20px;
+    width: 482px;
+    height: 53px;
+    background: #9998D3;
+    border-radius: 20px;
+    font-family: 'Raleway';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 24px;
+    line-height: 28px;
+    color: #FFFFFF;
+    cursor: pointer;
+}
+
+.inputFormFoto{
+    display: none;
+}
+
+.formTextFotoInput{
+    font-family: 'Raleway';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 19px;
+    color: #686868;
+    padding-top: 20px;
+}
+
+.EHolder{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
+    padding-top: 40px;
+    font-family: 'Raleway';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 18px;
+    line-height: 21px;
+    color: #686868;
+}
+
+.formTextFoto{
+    padding-left: 25px;
+    width: 470px;
+    height: 151px;
+    margin-top: 50px;
+    font-family: 'Raleway';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 24px;
+    line-height: 28px;
+    text-align: center;
+    text-justify: auto;
+    color: #000000;
+}
+
+.formInputFoto{ 
+        width: 495px;
+        height: 44px;
+        background: #FCF892;
+        box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.25);
+        border-radius: 20px;
+        margin-top: 40px;
+        border: none;
+
+        padding-left: 40%;
+        font-family: 'Raleway';
+        font-style: normal;
+        font-weight: 700;
+        font-size: 20px;
+        line-height: 23px;
+        display: flex;
+        align-items: center;
+        text-align: center;
+
+        color: #000000;
+        }
