--- a/styles/stylesheet.css
+++ b/styles/stylesheet.css
@@ -20,6 +20,14 @@
   src: url("../fonts/Raleway-ExtraBold.ttf");
 }
 
+input[type="search"]::-webkit-search-decoration,
+input[type="search"]::-webkit-search-cancel-button,
+input[type="search"]::-webkit-search-results-button,
+input[type="search"]::-webkit-search-results-decoration { display: none; }
+
+input[type=search]::-ms-clear { display: none; width : 0; height: 0; }
+input[type=search]::-ms-reveal { display: none; width : 0; height: 0; }
+
 /* GERAL */
 
 html, body {
@@ -53,6 +61,9 @@ body{
   z-index: 99;
   background-color: rgba(255, 255, 255, 0.3);
 }
+
+
+
 
 .navbarElement {
   font-family: "Raleway Extra Bold", sans-serif;
@@ -364,7 +375,7 @@ body{
   margin-top: 30px;
   filter: drop-shadow(4px 4px 20px rgba(0, 0, 0, 0.25));
   border: 1px solid rgba(0, 0, 0, 0.3);
-border-radius: 30px;
+  border-radius: 30px;
 }
 
 
@@ -452,4 +463,302 @@ border-radius: 30px;
   position: absolute; 
   margin-left: 700px; 
   margin-top: 50px;
+}
+
+
+/* PAGE FEED */
+
+.bodyFeed{
+display: flex; 
+justify-content: center;
+}
+
+.holderFeed{
+ width:1680px; 
+ height: 100vh; 
+ display: flex; 
+ flex-direction: row;
+}
+
+
+
+.hudHolder{
+  width: 25%; 
+  height: 100%; 
+  position: fixed;
+  left: 0;
+}
+
+.hud{
+  width: 100%; 
+  height: 100%; 
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+
+}
+
+.elementsHud{
+  display: flex;
+  flex-direction: column;
+}
+
+.elementos{
+padding-left: 27%;
+padding-top: 40px;
+}
+
+.elementHudText{
+  font-family: 'Raleway Bold';
+  font-style: normal;
+  font-weight: 700;
+  font-size: 25px;
+  line-height: 29px;
+  color: #000000;
+}
+
+.elementsHolder{
+  padding-block: 15px;
+}
+
+
+
+.postsHolder{
+  width: 50%; 
+  height: fit-content; 
+  background-color:#E0F1F4;
+  margin-left: 420px;
+  z-index: 99;
+
+}
+
+.posts{
+  width: 100%; 
+  height: fit-content; 
+
+}
+.elementosPosts{
+  width: 93%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding-left: 60px;
+  padding-top: 30px;
+}
+
+.barraPesquisaFeed{
+  width: 601px;
+  height: 49px;
+  background: #FFFFFF;
+  border: 1px solid #9998D3;
+  border-radius: 18px;
+  margin-right: 115px;
+  text-indent:63px;
+  z-index: 100;
+  
+  
+  font-family: 'Raleway Bold';
+  font-style: normal;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 19px;
+  color: #000000;
+
+  background-image: url(../images/lupa-icon.svg);
+  background-repeat: no-repeat;
+  background-position: 30px 13px;
+
+}
+
+#barraPesquisa{
+  position: fixed; 
+  z-index: 100; 
+  transition: 1s;
+  margin-right: 725px;
+}
+
+.barraPesquisaFeed::placeholder{
+  color: #000000;
+}
+
+.postarFeed{
+  width: 663px;
+  height: 101px;
+  background: #FFFFFF;
+  border-radius: 20px;
+  margin-right: 115px;
+  margin-bottom: 20px;
+  margin-top: 80px;
+
+  background-image: url('../images/postar-feed.svg');
+}
+
+.textoPostarFeed{
+  font-family: 'Raleway Bold';
+  font-style: normal;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 19px;
+
+  color: #000000;
+}
+.placeHolderPostarFeedBotao{
+  width: 115px;
+  height: 30px;
+  margin-left: 80%;
+  top: -20px;
+  position: relative;
+
+  background: #FBF793;
+  box-shadow: 3px 2px 10px rgba(0, 0, 0, 0.25);
+  border-radius: 15px;
+
+  font-family: 'Raleway Bold';
+  font-style: normal;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 19px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+
+  color: #000000;
+}
+
+
+.placeholderPost{
+  display: flex;
+  flex-direction: column;
+
+  width: 589px;
+  height: 761px;
+  background: #FFFFFF;
+  border-radius: 20px;
+  margin-right: 115px;
+  margin-block: 20px;
+
+  background-image: url('../images/placeholder-Post.svg');
+}
+
+
+
+.functionHolder{
+  width: 25%;
+  height: 100%; 
+  position: fixed;
+  right: 0;
+}
+
+.function{
+  width: 100%;
+  height: 100%; 
+
+}
+
+.placeHolderFeedAnimalPerdido{
+  display: flex;
+  flex-direction: column;
+
+  width: 390px;
+  height: 300px;
+  background: #FFFFFF;
+  border-radius: 20px;
+  margin: 10px;
+  margin-block: 20px;
+
+ 
+
+}
+.placeholderCategorias{
+  display: flex;
+  flex-direction: column;
+
+  width: 382px;
+  height: 241px;
+  background: #FFFFFF;
+  border-radius: 20px;
+  margin: 10px;
+  margin-block: 20px;
+}
+
+.placeholderCopyright{
+  display: flex;
+  flex-direction: column;
+
+  width: 385px;
+  height: 47px;
+  background: #FFFFFF;
+  border-radius: 20px;
+  margin: 10px;
+  margin-block: 20px;
+}
+
+
+
+
+
+.line{
+  width: 400px;
+  height: 0px;
+  border: 0.5px solid rgba(153, 152, 211, 1);
+  margin-left: 20%;
+  margin-block: 20px;
+}
+
+.botaoCriarPost{
+  width: 292px;
+  height: 60px;
+  background: #FBF793;
+  border: 1px solid #9998D3;
+  border-radius: 15px;
+  margin-left: 27%;
+  margin-top: 10px;
+
+  font-family: 'Raleway Bold';
+  font-style: normal;
+  font-weight: 700;
+  font-size: 24px;
+  line-height: 28px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  
+  color: #000000;
+}
+
+.userElementos{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    margin-block: 20px;
+    padding-right: 30px;
+}
+
+.imagemUser{
+  width: 75px; 
+  height: 75px; 
+  border-radius: 100px;  
+
+  border: 2px solid rgba(0, 0, 0, 1);
+}
+
+.textNomeUsuario{
+  font-family: 'Raleway Bold';
+font-style: normal;
+font-weight: 700;
+font-size: 20px;
+line-height: 23px;
+color: #000000;
+}
+
+.textLoginUsuario{
+  font-family: 'Raleway Bold';
+font-style: normal;
+font-weight: 700;
+font-size: 20px;
+line-height: 23px;
+color: #565656;
 }
