--- a/assets/styles/stylesheet.css
+++ b/assets/styles/stylesheet.css
@@ -550,20 +550,23 @@ body{
 .botaoCPost{
   height: 60px;
   width: 300px;
-  background: rgb(241, 241, 139);
+  background: #FFFB9F;
   border-radius: 30px;
 
-  border: 1px solid rgb(128, 128, 128);
+  border: none;
 
   font-family: 'Raleway Bold';
   font-size: 23px;
   
+  box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.1);
 }
 
 .botaoCPost:hover{
-  background: rgb(241, 241, 100);
+  background:  #FBF793;
   cursor: pointer;
   transition: 0.1s;
+
+  box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.14);
 }
 
 
